UPDATE CABINET PAGE

--- a/app/templates/credentials.html
+++ b/app/templates/credentials.html
@@ -168,12 +168,27 @@
                 <!-- ============================================================== -->
                 <div class="row">
                     <!-- Column -->
-                    <div class="col-sm-2">
+                    <div class="col-sm-4">
                         <div class="card">
                             <div class="row" style="margin-top: 15px; margin-left: 20px;">
-                                <h4 style="margin-left: 35px;">Scan QR to get credentials</h4>
+                                <h4 style="margin-left: 35px;">
+                                    Просканируйте QR код в Sirius App и получите цифровой пропуск, который позволит:
+                                      <br/>
+                                      1. Авторизовываться без ввода логина и пароля
+                                      <br/>
+                                      2. Подписываться на такие события как появление в списке приближающихся новых контейнеров, отчеты о прибытии и проч.
+                                </h4>
                             </div>
-                            <img src="{{ qr }}" style="width: 300px; height: 300px;"/>
+                            <table>
+                                <tr>
+                                    <td>
+                                        <img src="{{ qr }}" style="width: 300px; height: 300px;"/>
+                                    </td>
+                                    <td>
+                                        <img src="/static/assets/images/phone.png" style="width: 150px; height: 300px;"/>
+                                    </td>
+                                </tr>
+                            </table>
                         </div>
                     </div>
                     <!-- Column -->
