--- a/app/templates/transactions.html
+++ b/app/templates/transactions.html
@@ -1122,6 +1122,9 @@
                     if (this.form_step === 2 && !this.txn_processing.done) {
                         return ;
                     }
+                    if (this.form_step === 2 && this.op_code === 1 && this.txn_processing.done) {
+                        location.reload();
+                    }
                     $("#modal-txn-detail").hide();
                     $('#modal-doc-viewer').hide();
                     $('#modal-make-transactions').hide();
@@ -1196,10 +1199,10 @@
                                         self.txn_processing.done = true;
                                         console.log('end: processing was marked as done');
                                         if (op_code == 1) {
-                                            var ledger_name = obj.ledger.name;
-                                            self.ledgers.push(obj.ledger);
-                                            self.ledger_selected(obj.ledger);
-                                            self.search_ledger = ledger_name;
+                                            let ledger_name = obj.ledger.name;
+                                            //self.ledgers.push(obj.ledger);
+                                            //self.ledger_selected(obj.ledger);
+                                            //self.search_ledger = ledger_name;
                                         }
                                         else if (op_code === 2 && self.selected_ledger) {
                                             var ledger_name = obj.ledger.name;
